@@ -1,4 +1,5 @@
 #!/bin/sh
 umask 0000
-export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/lib/jvm/java-1.8-openjdk/jre/bin:/usr/lib/jvm/java-1.8-openjdk/bin:/bin/bash
-java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /opt/mongoose/mongoose.jar "$@"
+export JAVA_HOME=/opt/mongoose/jre
+export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${JAVA_HOME}/bin
+java --module com.emc.mongoose/com.emc.mongoose.Main "$@"
